@@ -1,6 +1,7 @@
 2012-10-10 Wed  Jari Aalto  <jari.aalto@cante.net>
 
-	* bin/lib/cygbuild.pl: (Help::OPTIONAL EXTERNAL FILES::mime): New.
+	* bin/lib/cygbuild.pl:
+	(Help::OPTIONAL EXTERNAL FILES::mime, dirs): New.
 
 	* bin/template/install.lst.ex: Add mkdir example.
 
